--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -8,56 +8,95 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
-  <!--[if lt IE 9]>
+  <link rel="stylesheet" href="css/theStyle.css">
+  <!--[if l 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-
+<header>
   <body>
-
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
-
+    <nav class="nav">
+  <a href="">Services</a>
+  <a href="">Product</a>
+  <a href="">Vision</a>
+  <a href="">Features</a>
+  <a href="">About</a>
+  <a href="">Contact</a>
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
-
-  Get Started
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </nav>
+  </header>
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="section1"">
+    <div class="bigText">
+  <h1>Innovation<br>
+  On<br>
+  Demand</h1>
+  <div class="getSt">Get Started</div>
+  </div>
+  <div class="image">
+     <img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+</section>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+<section class="section2">
+  <div class="top">
+
+      <div class="box features">
+      <h2>Features</h2>
+      <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p> 
+    </div>
+
+  <div class="box about"> 
+      <h2> About</h2>
+      <p>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+     </p>
+      </div>
+
+  <div class="image2">
+        <img class="box middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </div>
+ <div class="bottom">
+  <div class="box services">
+      <h2>Services</h2>
+      <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
+<div class="box product">
+    <h2> Product</h2>
+    <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+    </div>
+<div class="box vision">
+    <h2>Vision</h2>
+    <p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p>  
+  </div>
+</div>
+</section>
+<div class="line">-</div>
+<footer>
+<div class="contact">
+ <h2> Contact</h2>
+ <address> 
+   <strong class="address"> 123 Way 456 Street
+  Somewhere, USA </strong>
+  <strong class="fone"> 1(888) 888-8888 </strong>
+  <strong class="email"> @greatidea.io </strong>
+  </address>
   
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
+  </div>
+ <div class="copyright">
   Copyright Great Idea! 2018
-  
+  </idv>
+ 
+</footer>
   </body>
 </html>
